syntax = "proto3";

option csharp_namespace = "Grpc.Server.Protos";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
  rpc GetTask (GetTaskRequest) returns (TaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (Empty);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message GetTaskRequest {
  string id = 1;
}

message ListTasksRequest {}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message DeleteTaskRequest {
  string id = 1;
}

message TaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
}

message ListTasksResponse {
  repeated TaskResponse tasks = 1;
}

message Empty {}